# lambada

./: .gitignore  README.md  pyproject.toml  run.bat  setup_env.bat
src/artifacts/animation/poo/: 01.txt  02.txt  03.txt  04.txt  06.txt  07.txt  10.txt  11.txt  12.txt  3.txt  8.txt  9.txt  99.txt
src/artifacts/animation/wag/: 1.txt  2.txt
src/lambada/: lambada.py
